--- a/DiarizeAI-Mobil/src/services/locales/az.json
+++ b/DiarizeAI-Mobil/src/services/locales/az.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "Fayl bərpa edildi!",
   "alert_delete_confirm": "Təhlili silmək istədiyinizə əminsinizmi?",
   "cancell": "Ləğv et",
-  "delete": "Sil"
+  "delete": "Sil",
+  
+  "save_first": "Əvvəlcə yadda saxla",
+  "alert_save_first": "Zəhmət olmasa, emal etməzdən əvvəl faylı yadda saxlayın.",
+  "alert_no_file": "Zəhmət olmasa əvvəlcə səs yazın və ya seçin.",
+  "status_ai_thinking": "Süni İntellekt düşünür...",
+  "alert_analysis_saved": "Analiz tamamlandı və yadda saxlanıldı!",
+  "alert_process_failed": "Emal uğursuz oldu:",
+  "error_unknown": "Naməlum xəta",
+  "error_token_invalid": "Token xətası.",
+  "error_register_fail": "Qeydiyyat uğursuz oldu.",
+  "summaries_title": "Xülasələr",
+  "search_placeholder": "Axtardığınız söz...",
+  "advanced_filters": "Qabaqcıl Filtrlər",
+  "filter_language": "Dil",
+  "filter_sort_by": "Sıralama",
+  "sort_newest": "Ən Yeni",
+  "sort_oldest": "Ən Köhnə",
+  "filter_date": "Tarix",
+  "btn_select_date": "Tarix Seç",
+  "title_select_date": "Tarix Seçin",
+  "btn_done": "Tamam",
+  "no_results_found": "Nəticə tapılmadı.",
+  "no_saved_analysis": "Hələ yadda saxlanılan analiz yoxdur.",
+  "label_title": "BAŞLIQ"
 }
