--- a/DiarizeAI-Mobil/src/services/locales/en.json
+++ b/DiarizeAI-Mobil/src/services/locales/en.json
@@ -87,5 +87,29 @@
   "alert_file_relinked": "File restored!",
   "alert_delete_confirm": "Are you sure you want to delete the analysis?",
   "cancel": "Cancel",
-  "delete": "Delete"
+  "delete": "Delete",
+
+  "save_first": "Save first",
+  "alert_save_first": "Please save the file before processing.",
+  "alert_no_file": "Please record or select audio first.",
+  "status_ai_thinking": "AI is thinking...",
+  "alert_analysis_saved": "Analysis completed and saved!",
+  "alert_process_failed": "Process failed:",
+  "error_unknown": "Unknown error",
+  "error_token_invalid": "Token error.",
+  "error_register_fail": "Registration failed.",
+  "summaries_title": "Summaries",
+  "search_placeholder": "Search keyword...",
+  "advanced_filters": "Advanced Filters",
+  "filter_language": "Language",
+  "filter_sort_by": "Sort By",
+  "sort_newest": "Newest",
+  "sort_oldest": "Oldest",
+  "filter_date": "Date",
+  "btn_select_date": "Select Date",
+  "title_select_date": "Select Date",
+  "btn_done": "Done",
+  "no_results_found": "No results found.",
+  "no_saved_analysis": "No saved analysis yet.",
+  "label_title": "TITLE"
 }
