--- a/DiarizeAI-Mobil/src/services/locales/es.json
+++ b/DiarizeAI-Mobil/src/services/locales/es.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "¡Archivo restaurado!",
   "alert_delete_confirm": "¿Seguro que desea eliminar el análisis?",
   "cancel": "Cancelar",
-  "delete": "Eliminar"
+  "delete": "Eliminar",
+
+  "save_first": "Guardar primero",
+  "alert_save_first": "Por favor, guarde el archivo antes de procesar.",
+  "alert_no_file": "Por favor, grabe o seleccione audio primero.",
+  "status_ai_thinking": "La IA está pensando...",
+  "alert_analysis_saved": "¡Análisis completado y guardado!",
+  "alert_process_failed": "El proceso falló:",
+  "error_unknown": "Error desconocido",
+  "error_token_invalid": "Error de token.",
+  "error_register_fail": "Registro fallido.",
+  "summaries_title": "Resúmenes",
+  "search_placeholder": "Palabra clave...",
+  "advanced_filters": "Filtros Avanzados",
+  "filter_language": "Idioma",
+  "filter_sort_by": "Ordenar por",
+  "sort_newest": "Más reciente",
+  "sort_oldest": "Más antiguo",
+  "filter_date": "Fecha",
+  "btn_select_date": "Seleccionar Fecha",
+  "title_select_date": "Seleccione Fecha",
+  "btn_done": "Hecho",
+  "no_results_found": "No se encontraron resultados.",
+  "no_saved_analysis": "No hay análisis guardados aún.",
+  "label_title": "TÍTULO"
 }
