--- a/DiarizeAI-Mobil/src/services/locales/fa.json
+++ b/DiarizeAI-Mobil/src/services/locales/fa.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "فایل بازیابی شد!",
   "alert_delete_confirm": "آیا مطمئن هستید که می‌خواهید تحلیل را حذف کنید؟",
   "cancel": "لغو",
-  "delete": "حذف"
+  "delete": "حذف",
+
+  "save_first": "اول ذخیره کنید",
+  "alert_save_first": "لطفاً قبل از پردازش فایل را ذخیره کنید.",
+  "alert_no_file": "لطفاً ابتدا صدا ضبط کنید یا انتخاب کنید.",
+  "status_ai_thinking": "هوش مصنوعی در حال تفکر است...",
+  "alert_analysis_saved": "تحلیل کامل شد و ذخیره شد!",
+  "alert_process_failed": "پردازش ناموفق بود:",
+  "error_unknown": "خطای ناشناخته",
+  "error_token_invalid": "خطای توکن.",
+  "error_register_fail": "ثبت نام ناموفق بود.",
+  "summaries_title": "خلاصه ها",
+  "search_placeholder": "کلمه مورد نظر...",
+  "advanced_filters": "فیلترهای پیشرفته",
+  "filter_language": "زبان",
+  "filter_sort_by": "مرتب سازی بر اساس",
+  "sort_newest": "جدیدترین",
+  "sort_oldest": "قدیمی ترین",
+  "filter_date": "تاریخ",
+  "btn_select_date": "انتخاب تاریخ",
+  "title_select_date": "تاریخ را انتخاب کنید",
+  "btn_done": "انجام شد",
+  "no_results_found": "نتیجه ای یافت نشد.",
+  "no_saved_analysis": "هنوز تحلیلی ذخیره نشده است.",
+  "label_title": "عنوان"
 }
