--- a/DiarizeAI-Mobil/src/services/locales/fr.json
+++ b/DiarizeAI-Mobil/src/services/locales/fr.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "Fichier restauré !",
   "alert_delete_confirm": "Êtes-vous sûr de vouloir supprimer l'analyse ?",
   "cancel": "Annuler",
-  "delete": "Supprimer"
+  "delete": "Supprimer",
+
+  "save_first": "Enregistrer d'abord",
+  "alert_save_first": "Veuillez enregistrer le fichier avant le traitement.",
+  "alert_no_file": "Veuillez d'abord enregistrer ou sélectionner un audio.",
+  "status_ai_thinking": "L'IA réfléchit...",
+  "alert_analysis_saved": "Analyse terminée et enregistrée !",
+  "alert_process_failed": "Échec du traitement :",
+  "error_unknown": "Erreur inconnue",
+  "error_token_invalid": "Erreur de jeton.",
+  "error_register_fail": "Échec de l'inscription.",
+  "summaries_title": "Résumés",
+  "search_placeholder": "Mot-clé...",
+  "advanced_filters": "Filtres Avancés",
+  "filter_language": "Langue",
+  "filter_sort_by": "Trier par",
+  "sort_newest": "Plus récent",
+  "sort_oldest": "Plus ancien",
+  "filter_date": "Date",
+  "btn_select_date": "Choisir la date",
+  "title_select_date": "Sélectionner la date",
+  "btn_done": "Terminé",
+  "no_results_found": "Aucun résultat trouvé.",
+  "no_saved_analysis": "Aucune analyse enregistrée pour le moment.",
+  "label_title": "TITRE"
 }
