--- a/DiarizeAI-Mobil/src/services/locales/hi.json
+++ b/DiarizeAI-Mobil/src/services/locales/hi.json
@@ -87,5 +87,29 @@
   "alert_file_relinked": "फ़ाइल रिस्टोर हो गई!",
   "alert_delete_confirm": "क्या आप सच में एनालिसिस डिलीट करना चाहते हैं?",
   "cancel": "कैंसल करें",
-  "delete": "डिलीट करें"
+  "delete": "डिलीट करें",
+
+  "save_first": "पहले सेव करें",
+  "alert_save_first": "कृपया प्रोसेस करने से पहले फ़ाइल सेव करें।",
+  "alert_no_file": "कृपया पहले ऑडियो रिकॉर्ड करें या चुनें।",
+  "status_ai_thinking": "AI सोच रहा है...",
+  "alert_analysis_saved": "विश्लेषण पूरा हुआ और सेव हो गया!",
+  "alert_process_failed": "प्रक्रिया विफल:",
+  "error_unknown": "अज्ञात त्रुटि",
+  "error_token_invalid": "टोकन त्रुटि।",
+  "error_register_fail": "पंजीकरण विफल।",
+  "summaries_title": "सारांश",
+  "search_placeholder": "खोजने के लिए शब्द...",
+  "advanced_filters": "उन्नत फ़िल्टर",
+  "filter_language": "भाषा",
+  "filter_sort_by": "क्रमबद्ध करें",
+  "sort_newest": "नवीनतम",
+  "sort_oldest": "सबसे पुराना",
+  "filter_date": "दिनांक",
+  "btn_select_date": "दिनांक चुनें",
+  "title_select_date": "दिनांक चुनें",
+  "btn_done": "हो गया",
+  "no_results_found": "कोई परिणाम नहीं मिला।",
+  "no_saved_analysis": "अभी तक कोई विश्लेषण सहेजा नहीं गया है।",
+  "label_title": "शीर्षक"
 }
