--- a/DiarizeAI-Mobil/src/services/locales/id.json
+++ b/DiarizeAI-Mobil/src/services/locales/id.json
@@ -86,5 +86,29 @@
   "peringatan_file_ditautkan_kembali": "File dipulihkan!",
   "peringatan_konfirmasi_hapus": "Apakah Anda yakin ingin menghapus analisis?",
   "batal": "Batal",
-  "hapus": "Hapus"
+  "hapus": "Hapus",
+
+  "save_first": "Simpan dulu",
+  "alert_save_first": "Harap simpan file sebelum memproses.",
+  "alert_no_file": "Harap rekam atau pilih audio terlebih dahulu.",
+  "status_ai_thinking": "AI sedang berpikir...",
+  "alert_analysis_saved": "Analisis selesai dan disimpan!",
+  "alert_process_failed": "Proses gagal:",
+  "error_unknown": "Kesalahan tidak diketahui",
+  "error_token_invalid": "Kesalahan token.",
+  "error_register_fail": "Registrasi gagal.",
+  "summaries_title": "Ringkasan",
+  "search_placeholder": "Kata kunci pencarian...",
+  "advanced_filters": "Filter Lanjutan",
+  "filter_language": "Bahasa",
+  "filter_sort_by": "Urutkan berdasarkan",
+  "sort_newest": "Terbaru",
+  "sort_oldest": "Terlama",
+  "filter_date": "Tanggal",
+  "btn_select_date": "Pilih Tanggal",
+  "title_select_date": "Pilih Tanggal",
+  "btn_done": "Selesai",
+  "no_results_found": "Tidak ada hasil ditemukan.",
+  "no_saved_analysis": "Belum ada analisis tersimpan.",
+  "label_title": "JUDUL"
 }
