--- a/DiarizeAI-Mobil/src/services/locales/it.json
+++ b/DiarizeAI-Mobil/src/services/locales/it.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "File ripristinato!",
   "alert_delete_confirm": "Vuoi davvero eliminare l'analisi?",
   "cancel": "Annulla",
-  "delete": "Elimina"
+  "delete": "Elimina",
+
+  "save_first": "Salva prima",
+  "alert_save_first": "Si prega di salvare il file prima dell'elaborazione.",
+  "alert_no_file": "Si prega di registrare o selezionare l'audio prima.",
+  "status_ai_thinking": "L'IA sta pensando...",
+  "alert_analysis_saved": "Analisi completata e salvata!",
+  "alert_process_failed": "Processo fallito:",
+  "error_unknown": "Errore sconosciuto",
+  "error_token_invalid": "Errore token.",
+  "error_register_fail": "Registrazione fallita.",
+  "summaries_title": "Riepiloghi",
+  "search_placeholder": "Parola chiave...",
+  "advanced_filters": "Filtri Avanzati",
+  "filter_language": "Lingua",
+  "filter_sort_by": "Ordina per",
+  "sort_newest": "Più recente",
+  "sort_oldest": "Più vecchio",
+  "filter_date": "Data",
+  "btn_select_date": "Seleziona Data",
+  "title_select_date": "Seleziona Data",
+  "btn_done": "Fatto",
+  "no_results_found": "Nessun risultato trovato.",
+  "no_saved_analysis": "Nessuna analisi salvata ancora.",
+  "label_title": "TITOLO"
 }
