--- a/DiarizeAI-Mobil/src/services/locales/ja.json
+++ b/DiarizeAI-Mobil/src/services/locales/ja.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "ファイルが復元されました！",
   "alert_delete_confirm": "分析を削除してもよろしいですか？",
   "cancel": "キャンセル",
-  "delete": "削除"
+  "delete": "削除",
+
+  "save_first": "先に保存",
+  "alert_save_first": "処理する前にファイルを保存してください。",
+  "alert_no_file": "先に音声を録音または選択してください。",
+  "status_ai_thinking": "AIが思考中...",
+  "alert_analysis_saved": "分析が完了し保存されました！",
+  "alert_process_failed": "処理に失敗しました:",
+  "error_unknown": "不明なエラー",
+  "error_token_invalid": "トークンエラー。",
+  "error_register_fail": "登録に失敗しました。",
+  "summaries_title": "要約",
+  "search_placeholder": "検索キーワード...",
+  "advanced_filters": "高度なフィルター",
+  "filter_language": "言語",
+  "filter_sort_by": "並び替え",
+  "sort_newest": "新しい順",
+  "sort_oldest": "古い順",
+  "filter_date": "日付",
+  "btn_select_date": "日付を選択",
+  "title_select_date": "日付を選択してください",
+  "btn_done": "完了",
+  "no_results_found": "結果が見つかりませんでした。",
+  "no_saved_analysis": "保存された分析はまだありません。",
+  "label_title": "タイトル"
 }
