--- a/DiarizeAI-Mobil/src/services/locales/ko.json
+++ b/DiarizeAI-Mobil/src/services/locales/ko.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "파일이 복원되었습니다!",
   "alert_delete_confirm": "분석을 삭제하시겠습니까?",
   "cancel": "취소",
-  "delete": "삭제"
+  "delete": "삭제",
+
+  "save_first": "먼저 저장",
+  "alert_save_first": "처리하기 전에 파일을 저장해 주세요.",
+  "alert_no_file": "먼저 오디오를 녹음하거나 선택해 주세요.",
+  "status_ai_thinking": "AI가 생각 중입니다...",
+  "alert_analysis_saved": "분석이 완료되어 저장되었습니다!",
+  "alert_process_failed": "처리 실패:",
+  "error_unknown": "알 수 없는 오류",
+  "error_token_invalid": "토큰 오류.",
+  "error_register_fail": "등록 실패.",
+  "summaries_title": "요약",
+  "search_placeholder": "검색어...",
+  "advanced_filters": "고급 필터",
+  "filter_language": "언어",
+  "filter_sort_by": "정렬 기준",
+  "sort_newest": "최신순",
+  "sort_oldest": "오래된순",
+  "filter_date": "날짜",
+  "btn_select_date": "날짜 선택",
+  "title_select_date": "날짜를 선택하세요",
+  "btn_done": "완료",
+  "no_results_found": "결과를 찾을 수 없습니다.",
+  "no_saved_analysis": "저장된 분석이 아직 없습니다.",
+  "label_title": "제목"
 }
