--- a/DiarizeAI-Mobil/src/services/locales/pl.json
+++ b/DiarizeAI-Mobil/src/services/locales/pl.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "Plik przywrócony!",
   "alert_delete_confirm": "Czy na pewno chcesz usunąć analizę?",
   "cancel": "Anuluj",
-  "delete": "Usuń"
+  "delete": "Usuń",
+
+  "save_first": "Zapisz najpierw",
+  "alert_save_first": "Proszę zapisać plik przed przetworzeniem.",
+  "alert_no_file": "Proszę najpierw nagrać lub wybrać dźwięk.",
+  "status_ai_thinking": "AI myśli...",
+  "alert_analysis_saved": "Analiza zakończona i zapisana!",
+  "alert_process_failed": "Przetwarzanie nie powiodło się:",
+  "error_unknown": "Nieznany błąd",
+  "error_token_invalid": "Błąd tokena.",
+  "error_register_fail": "Rejestracja nie powiodła się.",
+  "summaries_title": "Podsumowania",
+  "search_placeholder": "Słowo kluczowe...",
+  "advanced_filters": "Zaawansowane filtry",
+  "filter_language": "Język",
+  "filter_sort_by": "Sortuj według",
+  "sort_newest": "Najnowsze",
+  "sort_oldest": "Najstarsze",
+  "filter_date": "Data",
+  "btn_select_date": "Wybierz datę",
+  "title_select_date": "Wybierz datę",
+  "btn_done": "Gotowe",
+  "no_results_found": "Nie znaleziono wyników.",
+  "no_saved_analysis": "Brak zapisanych analiz.",
+  "label_title": "TYTUŁ"
 }
