--- a/DiarizeAI-Mobil/src/services/locales/pt.json
+++ b/DiarizeAI-Mobil/src/services/locales/pt.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "Ficheiro restaurado!",
   "alert_delete_confirm": "Tem a certeza que pretende eliminar a análise?",
   "cancel": "Cancelar",
-  "apagar": "Apagar"
+  "apagar": "Apagar",
+
+  "save_first": "Salvar primeiro",
+  "alert_save_first": "Por favor, salve o arquivo antes de processar.",
+  "alert_no_file": "Por favor, grave ou selecione o áudio primeiro.",
+  "status_ai_thinking": "IA está pensando...",
+  "alert_analysis_saved": "Análise concluída e salva!",
+  "alert_process_failed": "Processo falhou:",
+  "error_unknown": "Erro desconhecido",
+  "error_token_invalid": "Erro de token.",
+  "error_register_fail": "Registro falhou.",
+  "summaries_title": "Resumos",
+  "search_placeholder": "Palavra-chave...",
+  "advanced_filters": "Filtros Avançados",
+  "filter_language": "Idioma",
+  "filter_sort_by": "Ordenar por",
+  "sort_newest": "Mais recente",
+  "sort_oldest": "Mais antigo",
+  "filter_date": "Data",
+  "btn_select_date": "Selecionar Data",
+  "title_select_date": "Selecione a Data",
+  "btn_done": "Concluído",
+  "no_results_found": "Nenhum resultado encontrado.",
+  "no_saved_analysis": "Nenhuma análise salva ainda.",
+  "label_title": "TÍTULO"
 }
