--- a/DiarizeAI-Mobil/src/services/locales/ru.json
+++ b/DiarizeAI-Mobil/src/services/locales/ru.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "Файл восстановлен!",
   "alert_delete_confirm": "Вы уверены, что хотите удалить анализ?",
   "cancel": "Отмена",
-  "delete": "Удалить"
+  "delete": "Удалить",
+
+  "save_first": "Сначала сохранить",
+  "alert_save_first": "Пожалуйста, сохраните файл перед обработкой.",
+  "alert_no_file": "Пожалуйста, сначала запишите или выберите аудио.",
+  "status_ai_thinking": "ИИ думает...",
+  "alert_analysis_saved": "Анализ завершен и сохранен!",
+  "alert_process_failed": "Ошибка обработки:",
+  "error_unknown": "Неизвестная ошибка",
+  "error_token_invalid": "Ошибка токена.",
+  "error_register_fail": "Ошибка регистрации.",
+  "summaries_title": "Сводки",
+  "search_placeholder": "Ключевое слово...",
+  "advanced_filters": "Расширенные фильтры",
+  "filter_language": "Язык",
+  "filter_sort_by": "Сортировать по",
+  "sort_newest": "Сначала новые",
+  "sort_oldest": "Сначала старые",
+  "filter_date": "Дата",
+  "btn_select_date": "Выбрать дату",
+  "title_select_date": "Выберите дату",
+  "btn_done": "Готово",
+  "no_results_found": "Результаты не найдены.",
+  "no_saved_analysis": "Нет сохраненных анализов.",
+  "label_title": "ЗАГОЛОВОК"
 }
