--- a/DiarizeAI-Mobil/src/services/locales/zh.json
+++ b/DiarizeAI-Mobil/src/services/locales/zh.json
@@ -86,5 +86,29 @@
   "alert_file_relinked": "文件已恢复！",
   "alert_delete_confirm": "确定要删除此分析吗？",
   "cancel": "取消",
-  "delete": "删除"
+  "delete": "删除",
+
+  "save_first": "先保存",
+  "alert_save_first": "请在处理前保存文件。",
+  "alert_no_file": "请先录音或选择音频。",
+  "status_ai_thinking": "AI正在思考...",
+  "alert_analysis_saved": "分析已完成并保存！",
+  "alert_process_failed": "处理失败：",
+  "error_unknown": "未知错误",
+  "error_token_invalid": "令牌错误。",
+  "error_register_fail": "注册失败。",
+  "summaries_title": "摘要",
+  "search_placeholder": "搜索关键词...",
+  "advanced_filters": "高级筛选",
+  "filter_language": "语言",
+  "filter_sort_by": "排序方式",
+  "sort_newest": "最新",
+  "sort_oldest": "最旧",
+  "filter_date": "日期",
+  "btn_select_date": "选择日期",
+  "title_select_date": "请选择日期",
+  "btn_done": "完成",
+  "no_results_found": "未找到结果。",
+  "no_saved_analysis": "暂无保存的分析。",
+  "label_title": "标题"
 }
