--- a/DiarizeAI-Mobil/src/services/locales/ar.json
+++ b/DiarizeAI-Mobil/src/services/locales/ar.json
@@ -109,5 +109,9 @@
   "btn_done": "موافق",
   "no_results_found": "لم يتم العثور على نتائج.",
   "no_saved_analysis": "لا توجد تحليلات محفوظة حتى الآن.",
-  "label_title": "العنوان"
+  "label_title": "العنوان",
+
+  "token_could_not_be_stored": "لم يتم تخزين الرمز:",
+  "token_could_not_be_read": "تعذرت قراءة الرمز:",
+  "the_token_could_not_be_deleted.": "تعذر حذف الرمز."
 }
