--- a/DiarizeAI-Mobil/src/services/locales/en.json
+++ b/DiarizeAI-Mobil/src/services/locales/en.json
@@ -111,5 +111,9 @@
   "btn_done": "Done",
   "no_results_found": "No results found.",
   "no_saved_analysis": "No saved analysis yet.",
-  "label_title": "TITLE"
+  "label_title": "TITLE",
+
+  "token_could_not_be_stored": "Token could not be stored:",
+  "token_could_not_be_read": "Token could not be read:",
+  "the_token_could_not_be_deleted.": "Token could not be deleted."
 }
