--- a/DiarizeAI-Mobil/src/services/locales/es.json
+++ b/DiarizeAI-Mobil/src/services/locales/es.json
@@ -115,6 +115,13 @@
   
   "token_could_not_be_stored": "No se pudo guardar el token:",
   "token_could_not_be_read": "No se pudo leer el token:",
-  "the_token_could_not_be_deleted.": "No se pudo eliminar el token."
+  "the_token_could_not_be_deleted.": "No se pudo eliminar el token.",
+
+  "rename_speaker_title": "Renombrar orador",
+  "rename_speaker_subtitle": "Nombre actual",
+  "placeholder_new_name": "Ingresar nuevo nombre...",
+  "btn_save": "Guardar",
+  "error_empty_name": "El nombre no puede estar vacío.",
+  "error_save_failed": "Error al guardar."
 
 }
